# PythonLectures_QT_prototype

./: docxTransform.py  test.docx
LLearnPy/: LLearnPy.pro  LLearnPy.pro.user.orig  aboutform.cpp  aboutform.h  aboutform.ui  lectureform.cpp  lectureform.h  lectureform.ui  llearnpy.cpp  llearnpy.h  llearnpy.ui  main.cpp  resourses.qrc  sandboxform.cpp  sandboxform.h  sandboxform.ui  settingform.cpp  settingform.h  settingform.ui  taskform.cpp  taskform.h  taskform.ui  windowstyledesign.cpp  windowstyledesign.h
LLearnPy/res/font/: COPYRIGHT.txt
PythonLearn/: PythonLearn.pro.user.0f364fc
PythonLearn/.qtc_clangd/: compile_commands.json
PythonLearn/.qtc_clangd/.cache/clangd/index/: PythonLearn.config.072F098C29B0B8D0.idx  main.cpp.6773647724D2631E.idx  pythonlearnwindow.cpp.7BA2B8DDC6F81A16.idx  pythonlearnwindow.h.0C281B255C367899.idx
Testing_features_LearnPy/: CMakeLists.txt  CMakeLists.txt.user.0f364fc  lecture_processing.cpp  lecture_processing.h  mainwindow.cpp  mainwindow.ui  style.css
Курсач/: 10-8Python-I.ppt  11-7_Python.ppt  ~$кция 4 Нелинейный алгоритмы. Циклы.docx  Кр111_Лекция_1_Знакомство_со_средой.txt  Кр_Лекция_1_Знакомство_со_средой.docx  Кр_Лекция_1_Знакомство_со_средой.txt  Л1.docx  Лекция 1.docx  Лекция 2 Линейные алгоритмы.docx  Лекция 3 Нелинейные алгоритмы. Ветвление.docx  Лекция 4 Нелинейный алгоритмы. Циклы.docx  Новая Л1.docx  список тем.txt
Курсач/PythonKubSU/: ~$кция 2.docx  Задачи.if.for.while.docx  Лекция 1.docx  Лекция 2.docx  Лекция 3.docx  Лекция 4.docx
